Updated solo project 2-2-2023

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html> 
-<html> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Codesmith Solo Project Ahmed Chami</title>
+    <link rel="stylesheet" href="./client/css/styles.css" />
+  </head>
 
-<head> 
-<title> Codesmith Solo Project Ahmed Chami</title>
-    <link rel="stylesheet" href="./client/css/styles.css">
-</head>
-
-
-<body>
-    <header>
-        <h1> EXPRESSing Emotions with Elegance</h1> 
-    </header>
-    <div id="app"></div>
-</body>
+  <body>
+    <main id="root"></main>
+    <script defer href="./build/bundle.js"></script>
+  </body>
 </html>
