--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>Codesmith Solo Project Ahmed Chami</title>
     <link rel="stylesheet" href="./client/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
